--- a/Projects/styles.css
+++ b/Projects/styles.css
@@ -4,9 +4,8 @@ body{
     background-repeat: no-repeat;
     background-position: center center;
     background-attachment: fixed;
-    background-size: 100% auto;
+    background-size: 120% auto;
     background-position: top;
-    /* font-family: Arial, Helvetica, sans-serif; */
     font: 17px Arial, Helvetica, sans-serif;
 }
 .menu{
@@ -42,37 +41,31 @@ a:hover{
 }
 .slider-top h2{
     font-style: italic;
-    z-index: 5;
-    font-family: Arial, Helvetica, sans-serif;
-    text-shadow: none;
-    letter-spacing: 2px;
-    visibility: visible;
-    text-align: right;
-    padding-top: 350px;
-    padding-right: 150px;
-    line-height: 50px;
-    font-weight: 500;
+    font-weight: 4000;
     font-size: 50px;
-    color: rgb(255, 255, 255);
-    text-decoration: none;
+    letter-spacing: 2px;
+
 }
 
 .slider-top p{
-    color: white;
-    z-index: 6;
-    font-family: Ubuntu;
-    text-shadow: none;
-    letter-spacing: 2px;
-    visibility: visible;
-    text-align: left;
     line-height: 33px;
-    font-weight: 300;
+    font-weight: 100;
     font-size: 33px;
-    /* text-align: right; */
+    letter-spacing: 2px;
 }
 
 .slider-top{
-    display: block;
-    justify-content: center;
-    align-items: right;
+    font-family: Ubuntu, Arial, Helvetica, sans-serif;
+    color: white;
+    float: right;
+    width: 350px;
+    padding-right: 100px;
+    margin-top: 400px;
+    display: flex;
+    align-items: flex-start;
+    gap: 12px;    
+}
+.line-img{
+    height: 200px;
+    margin-top: 30px;
 }
